fix overlaping slide controls in portrait mode

--- a/bigbluebutton-html5/imports/ui/components/presentation/presentation-toolbar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/presentation/presentation-toolbar/styles.scss
@@ -38,6 +38,10 @@ $controls-background: #F0F2F6 !default;
     font-weight: bolder;
     color: $color-gray;
   }
+
+  @include mq('portrait') {
+     margin-bottom: 12% !important;
+  }
 }
 
 .zoomWrapper {
